--- a/src/sass/info/main.scss
+++ b/src/sass/info/main.scss
@@ -130,7 +130,7 @@ text-align: right;
             background-color: #fff;
             padding: 10px 17px;
       &:hover {
-        color: #000;
+//        color: #000;
         background: #ccc;
       }
     }
@@ -599,7 +599,7 @@ display: block;
   color: #000000;
   font-family: "SF Pro Display";
   font-size: 16px;
-  font-weight: 300;
+  font-weight: 400;
   line-height: 1.25;
       max-width: 1000px;
 margin-left: auto;
@@ -623,6 +623,8 @@ margin-left: auto;
   margin-top: 70px;
   &:hover {
     transform: translateY(5%);
+  color: #fff;
+    
     box-shadow: 0 14px 40px rgba(98, 253, 67, 0);
   background-image: linear-gradient(to bottom, #33bc3e 0%, #27e335 100%);
 
