--- a/src/sass/info/mobile.scss
+++ b/src/sass/info/mobile.scss
@@ -391,4 +391,8 @@
   .registration {
     background-size: cover;
   }
+  .login-list li a {
+    padding-left: 13px;
+    padding-right: 13px;
+  }
 }
