--- a/src/sass/info/main.scss
+++ b/src/sass/info/main.scss
@@ -888,6 +888,7 @@ text-transform: uppercase;
 color: #339c3e;
       padding-left: 10px;
       svg {
+            margin-top: -2px;
         height: 15px;
         max-width: 22.5px;
         margin-right: 8px;
