--- a/src/sass/info/main.scss
+++ b/src/sass/info/main.scss
@@ -959,7 +959,7 @@ color: #339c3e;
 }
 
 .registration {
-  background: url('../images/regbg.png') no-repeat center;
+  background: url('../images/regbg.jpg') no-repeat center;
   padding-top: 139px;
   padding-bottom: 90px;
 }
